根据虚拟环境更新requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 ai2thor==5.0.0
-matplotlib==3.8.2
-gymnasium==1.0.0
-numpy==1.26.3
-pygame==2.5.2
 ale-py==0.9.0
-autorom==0.6.1
-AutoROM.accept-rom-license==0.6.1 
+AutoROM==0.6.1
+AutoROM.accept-rom-license==0.6.1
+easyocr==1.7.2
+gymnasium==1.0.0
+ipykernel==6.29.5
+jupyter==1.1.1
+jupyterlab==4.3.5
+matplotlib==3.8.2
+notebook==7.3.2
+numpy==1.26.3
+opencv-python==4.11.0.86
+pillow==11.1.0
+pygame==2.5.2
+scikit-image==0.25.1
+scipy==1.15.1
+torch==2.6.0
+torchvision==0.21.0 
